<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Celebrity Quiz</string>
    <string name="back" />
    <string name="settings" />

    <string name="settingsTitle">Level of Difficulty</string>

    <string name="timeTitle">Choose Countdown</string>
    <string name="seconds30">30 Seconds</string>
    <string name="seconds60">60 Seconds</string>
    <string name="seconds90">90 Seconds</string>

    <string name="scoreContent">This is your score</string>
    <string name="scoreHeader">Score</string>

    <string name="textTime">30</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="startQuiz">Start Quiz</string>


    <string name="category_json_url">https://pastebin.com/raw/anZLdKMv</string>
    <string name="category_title">Category Select</string>
    <string name="category_loading_text">Downloading Category List ...</string>


    <string name="quiz_loading_text">Downloading Quiz Content ...</string>
    <string name="quiz_input_hint">Enter your answer</string>


    <string name="score_title">Your Score is</string>
    <string name="score_quiz_name">Quiz Name: %1$s</string>
    <string name="score_zero">0</string>
    <string name="score_btn_review">Review &amp; Solution</string>
    <string name="score_btn_exit">Go to Quiz List</string>


    <string name="ranking_title">User Ranking</string>
    <string name="ranking_loading_text">Loading user ranking...</string>


    <string name="mypage_title">My Page</string>
    <string name="mypage_nick_name">%1$s</string>
    <string name="mypage_best_score">Best Score : %1$d</string>
    <string name="mypage_average_score">Average Score : %1$.2f</string>
    <string name="mypage_total_solved">Total Solved : %1$d</string>
</resources>
