<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScoreActivity">

    <TextView
        android:id="@+id/score_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/score_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/score_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_text_title"
        app:srcCompat="@drawable/image_score" />

    <ImageView
        android:id="@+id/score_view_background"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_image"
        app:srcCompat="@drawable/button_rounded" />

    <View
        android:id="@+id/score_view_divider"
        style="@style/HorizontalDivider"
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/score_view_background"
        app:layout_constraintEnd_toEndOf="@+id/score_view_background"
        app:layout_constraintStart_toStartOf="@+id/score_view_background"
        app:layout_constraintTop_toTopOf="@+id/score_view_background" />

    <TextView
        android:id="@+id/score_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_zero"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_view_divider"
        app:layout_constraintEnd_toEndOf="@+id/score_view_background"
        app:layout_constraintStart_toStartOf="@id/score_view_background" />

    <TextView
        android:id="@+id/score_text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_zero"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/score_view_background"
        app:layout_constraintStart_toStartOf="@id/score_view_background"
        app:layout_constraintTop_toBottomOf="@+id/score_view_divider" />

    <TextView
        android:id="@+id/score_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/score_quiz_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view_background" />

    <Button
        android:id="@+id/score_btn_review"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/score_btn_review"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_text_name" />

    <Button
        android:id="@+id/score_btn_exit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/score_btn_exit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_btn_review" />

</androidx.constraintlayout.widget.ConstraintLayout>